bug:main content scrolling behind header and footer removed to address the responsiveness issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,4 +1,7 @@
+/* google fonts import */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 * {
     padding: 0;
@@ -15,6 +18,10 @@ body {
     /*color: #3a3a3a;*/
     color: white;
     font-family: "Roboto", sans-serif;
+}
+
+h1,h2,h3,h4 {
+    font-family: "Roboto Slab", serif;
 }
 
 /* causes everything to inherit bgc from its parent */
@@ -48,9 +55,6 @@ header a {
     align-items: center;
 }
 
-/* name should be changed in 
-html and here to reflect that 
-they are not together anymore */
 #logo-div {
     display: flex;
     flex-direction: column;
@@ -476,7 +480,8 @@ footer {
         justify-content: center;
         align-items: center;
         flex-direction: column;
-        background: transparent;
+        background-color: black;
+        z-index: 99;
     }
 
     nav {
@@ -490,7 +495,6 @@ footer {
         /*background-color: #E5E4E2;*/
         background-color: black;
         justify-content: space-around;
-        z-index: 99;
     }
 
     #nav-menu {
@@ -533,7 +537,6 @@ footer {
         margin-top: 161px;
         display: flex;
         justify-content: center;
-        z-index: 50;
     }
 
     /* Landing page */
@@ -629,8 +632,9 @@ footer {
     footer {
         display: flex;
         justify-content: center;
-        background: transparent;
+        background-color: black;
     }
+
     #social-networks {
         display: flex;
         /*should this position rule be commented out*/
@@ -649,9 +653,7 @@ footer {
     }
 }
 
-/* media query: laptop and larger (992px)*/
-/* I changed the number of pixels since my screen has a smaller width.
-   I am not sure what this media query should be set to.*/
+
 @media screen and (min-width: 916px) {
     #nav-menu a:hover {
         /*border-bottom: 1.5px solid #3a3a3a;*/
